# biolib

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  LICENSE  PROJECTNAME  README  Rakefile  TODO  VERSION  configure  install.sh
doc/examples/c/: CMakeLists.txt  affy.c
src/: CMakeLists.txt
src/bindings/swig/: INSTALL  affy.i  affyio.i  staden_io_lib.i
src/bindings/swig/perl/: CMakeLists.txt
src/bindings/swig/ruby/: CMakeLists.txt
src/biolib/ruby/qtl/: qtl.rb  qtlcsv.rb  qtldataset.rb  qtlindividual.rb  qtlmarker.rb  qtlphenotype.rb
src/biolib/ruby/test/: biolibtest.rb
src/clibs/: CMakeLists.txt
src/clibs/affy-1.18.2/: DESCRIPTION  NEWS  README_BIOLIB  changelog
src/clibs/affy-1.18.2/R/: AffyBatch.R  AffyRNAdeg.R  ProbeSet.R  ProgressBarText.R  avdiff.R  barplot.ProbeSet.R  bg.Affy.chipwide.R  bg.R  expresso.R  expressoWidget.R  fit.li.wong.R  generateExprVal.method.avgdiff.R  generateExprVal.method.liwong.R  generateExprVal.method.mas.R  generateExprVal.method.medianpolish.R  generateExprVal.method.playerout.R  getCDFenv.R  hlog.R  justrma.R  loess.normalize.R  maffy.R  mas5.R  merge.AffyBatch.R  mva.pairs.R  normalize.constant.R  normalize.contrasts.R  normalize.invariantset.R  normalize.loess.R  normalize.qspline.R  normalize.quantiles.R  pairs.AffyBatch.R  plot.ProbeSet.R  plot.density.R  plotLocation.R  pmcorrect.mas.R  ppset.ttest.R  ppsetApply.R  read.affybatch.R  rma.R  summary.R  (+4 more)
src/clibs/affy-1.18.2/doc/: CITATION
src/clibs/affy-1.18.2/man/: AffyBatch-class.Rd  AffyRNAdeg.Rd  MAplot.Rd  ProbeSet-class.Rd  ProgressBarText-class.Rd  SpikeIn.Rd  affy-options.Rd  affy.scalevalue.exprSet.Rd  affybatch.example.Rd  barplot.ProbeSet.Rd  bg.adjust.Rd  bgc.Rd  cdfFromBioC.Rd  cdfenv.example.Rd  cleancdfname.Rd  debug.affy123.Rd  expresso.Rd  expressoWidget.Rd  fit.li.wong.Rd  generateExprSet-methods.Rd  generateExprVal-methods.Rd  generateExprVal.method.avgdiff.Rd  generateExprVal.method.playerout.Rd  hlog.Rd  justrma.Rd  list.celfiles.Rd  loess.normalize.Rd  maffy.normalise.Rd  maffy.subset.Rd  mas5.Rd  mas5calls.Rd  merge.AffyBatch.Rd  multiloess.Rd  mva.pairs.Rd  normalize-methods.Rd  normalize.Rd  normalize.constant.Rd  normalize.contrast.Rd  normalize.invariantset.Rd  normalize.loess.Rd  (+20 more)
src/clibs/affy-1.18.2/src/: Makevars.in  biolib_affy.c  biolib_affy.h  chipbackground.c  getall_locations.c  mas5calls.c  rma2.c  rma_common.c  rma_common.h
src/clibs/affyio/: DESCRIPTION  HISTORY  NAMESPACE  configure  configure.in
src/clibs/affyio-1.8/: DESCRIPTION  LICENSE  README_BIOLIB  aclocal.m4  configure  configure.in
src/clibs/affyio-1.8/R/: check.cdf.type.R  read.cdffile.list.R  read.celfile.R  read.celfile.header.R
src/clibs/affyio-1.8/man/: check.cdf.type.Rd  read.cdffile.list.Rd  read.celfile.Rd  read.celfile.header.Rd  read.celfile.probeintensity.matrices.Rd
src/clibs/affyio-1.8/src/: CMakeLists.txt  Makevars.in  Makevars.win  biolib_affyio.c  biolib_affyio.h  fread_functions.h  read_abatch.c  read_abatch.h  read_bpmap.c  read_cdf.h  read_cdf_xda.c  read_cdffile2.c  read_celfile_generic.c  read_celfile_generic.h  read_clf.c  read_generic.c  read_generic.h  read_pgf.c
src/clibs/affyio/R/: check.cdf.type.R  read.cdffile.list.R  read.celfile.R  read.celfile.header.R  read.probematrices.R
src/clibs/affyio/man/: check.cdf.type.Rd
src/clibs/affyio/src/: CMakeLists.txt  fread_functions.c  read_abatch.c  read_abatch.h  read_bpmap.c  read_cdf.h  read_cdf_xda.c  read_cdffile2.c  read_celfile_generic.c  read_celfile_generic.h  read_generic.c
src/clibs/biolib_R/: README
src/clibs/biolib_R/include/: biolib_R_map.h
src/clibs/biolib_R/src/: CMakeLists.txt  biolib_R_map.c
src/clibs/biolib_affy/: README
src/clibs/biolib_affy/include/: biolib_affy.h
src/clibs/biolib_affy/src/: CMakeLists.txt
src/clibs/biolib_core/: README
src/clibs/biolib_core/include/: biolib_R_map.h  biolib_error.h
src/clibs/biolib_core/src/: CMakeLists.txt  biolib_error.c
src/clibs/biolib_gsl/src/: CMakeLists.txt  gsl_files.txt  rng.c
src/clibs/biolib_microarray/src/: CMakeLists.txt  biolib_microarray.c
src/clibs/biopp/: README
src/clibs/biopp/doc/: NOTES.txt
src/clibs/biopp/src/: CMakeLists.txt  files.txt
src/clibs/emboss/: README
src/clibs/emboss-6.1.0/: README
src/clibs/emboss-6.1.0/src/: CMakeLists.txt  files.txt
src/clibs/emboss/src/: CMakeLists.txt  biolib_getorf.c  biolib_getorf.h  files.txt  skipping.txt
src/clibs/example-1.0/: CMakeLists.txt  biolib_example.h  example.c
src/clibs/gsl/: README
src/clibs/gsl/src/: CMakeLists.txt  gsl_files.txt
src/clibs/libsequence-1.6.6/: README
src/clibs/libsequence-1.6.6/src/: CMakeLists.txt  CoalescentSimTypes.cc  files.txt
src/clibs/libsequence/src/: CMakeLists.txt  files.txt
src/clibs/preprocessCore-1.3.2/: CHANGELOG  DESCRIPTION  README_BIOLIB
src/clibs/preprocessCore-1.3.2/R/: colSummarize.R  init.R  normalize.quantiles.R  plmd.R  plmr.R  quantile_extensions.R  rcModel.R  rma.background.correct.R  subColSummarize.R
src/clibs/preprocessCore-1.3.2/man/: colSummarize.Rd  normalize.quantiles.Rd  normalize.quantiles.in.blocks.Rd  normalize.quantiles.robust.Rd  normalize.quantiles.target.Rd  rcModelPLMd.Rd  rcModelPLMr.Rd  rcModels.Rd  rma.background.correct.Rd  subColSummarize.Rd
src/clibs/preprocessCore-1.3.2/src/: Makevars.in  R_colSummarize.c  R_colSummarize.h  R_plmd_interfaces.c  R_plmr_interfaces.c  R_plmr_interfaces.h  R_rlm_interfaces.c  R_rlm_interfaces.h  R_subColSummarize.c  avg.c  avg.h  avg_log.c  avg_log.h  biolib_preprocesscore.c  biweight.c  biweight.h  dqrls.h  init_package.c  lm.c  lm.h  log_avg.c  log_avg.h  log_median.c  log_median.h  matrix_functions.c  matrix_functions.h  median.c  (+21 more)
src/clibs/samtools/: README
src/clibs/staden-io_lib-1.11.6/: README  README_STADEN-IO_LIB
src/clibs/staden_io_lib/: README
src/clibs/staden_io_lib-1.11.6/: CHANGES  COPYRIGHT  ChangeLog  README_STADEN-IO_LIB
src/extra/: README.txt
src/mappings/swig/: biolib_R.i  biolib_core.i  emboss.i  example.i  libsequence.i  rqtl.i  samtools.i  staden_io_lib.i
src/test/regression/: README
(+1224 files in other folders)
