cmake_minimum_required(VERSION 2.6)

PROJECT(C_examples)

SET(CMAKE_BUILD_TYPE Debug)
SET (CMAKE_MODULE_PATH ../../../cmake_modules)
SET (USE_BIOLIBCORE TRUE)
FIND_PACKAGE(Map)
FIND_PACKAGE(ZLIB)
FIND_PACKAGE(RLibs)

INCLUDE_DIRECTORIES("${MAP_CLIBS_PATH}/affyio-1.8/src")
INCLUDE_DIRECTORIES("${MAP_CLIBS_PATH}/biolib_microarray/include")

FIND_LIBRARY(AFFYIO_LIBRARY NAMES libbiolib_affyio-${MAP_VERSION}.so PATHS ${MAP_CLIBS_PATH}/affyio-1.8/src)
LINK_LIBRARIES(${AFFYIO_LIBRARY} ${BILIB_LIBRARY} ${R_LIBRARY} ${ZLIB_LIBRARY})
ADD_EXECUTABLE(affy affy.c)

message("  Build type=${CMAKE_BUILD_TYPE}")

