cmake_minimum_required(VERSION 2.6)

PROJECT(Biolib_example)
SET (M_NAME example)
SET (M_VERSION 1.0)

IF(NOT BUILD_LIBS)
  SET (MAP_ROOT ../../..)
  SET (CMAKE_MODULE_PATH ${MAP_ROOT}/tools/cmake-support/modules)
ENDIF(NOT BUILD_LIBS)

FIND_PACKAGE(Map REQUIRED)

INCLUDE_DIRECTORIES(.)

BUILD_CLIB()

ADD_LIBRARY(${LIBNAME} SHARED example.c)

INSTALL_CLIB()

