cmake_minimum_required(VERSION 2.6)

PROJECT(Biolib_affy)

IF(NOT BUILD_LIBS)
  SET (CMAKE_MODULE_PATH ../../../../cmake_modules)
ENDIF(NOT BUILD_LIBS)

FIND_PACKAGE(BioLib)

SET(LIBNAME biolib_affy-${BIOLIB_VERSION})

INCLUDE_DIRECTORIES(../include)
ADD_LIBRARY(${LIBNAME} SHARED biolib_affy.c)

INSTALL(TARGETS ${LIBNAME}
  LIBRARY DESTINATION lib
)


