cmake_minimum_required(VERSION 2.6)

PROJECT(Biolib_core)

IF(NOT BUILD_LIBS)
  SET (CMAKE_MODULE_PATH ../../../../cmake_modules)
ENDIF(NOT BUILD_LIBS)

FIND_PACKAGE(Map)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../build)

SET(LIBNAME biolib_core-${BIOLIB_VERSION})

INCLUDE_DIRECTORIES(../include)
ADD_LIBRARY(${LIBNAME} SHARED biolib_error.c)

INSTALL(TARGETS ${LIBNAME}
  LIBRARY DESTINATION lib
)


