# Module CMake file - builds library in ./contrib

cmake_minimum_required(VERSION 2.6)

PROJECT(Biolib_emboss)
SET (M_NAME emboss)
SET (M_VERSION 6.1.0)

IF(NOT BUILD_LIBS)
  SET (MAP_ROOT ../../../..)
  SET (CMAKE_MODULE_PATH ${MAP_ROOT}/tools/cmake-support/modules)
ENDIF()

FIND_PACKAGE(Map)

SET(CONTRIB_PATH ${MAP_ROOT}/contrib/EMBOSS)

MESSAGE("CONTRIB_PATH=${CONTRIB_PATH}")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../build)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CONTRIB_PATH}/ajax/core)
INCLUDE_DIRECTORIES(${CONTRIB_PATH}/ajax/pcre)
INCLUDE_DIRECTORIES(${CONTRIB_PATH}/ajax/ajaxdb)
INCLUDE_DIRECTORIES(${CONTRIB_PATH}/ajax/graphics)
INCLUDE_DIRECTORIES(${CONTRIB_PATH}/plplot)

# INCLUDE_DIRECTORIES(${BOOST_PATH})
add_definitions(-DVERSION="6.1" -DLINK_SIZE=4 -DHAVE_MEMMOVE -DPOSIX_MALLOC_THRESHOLD=10)
add_definitions(-DMAX_NAME_COUNT=10000 -DNEWLINE=10 -DMAX_NAME_SIZE=32 -DMATCH_LIMIT=10000000 -DMATCH_LIMIT_RECURSION=MATCH_LIMIT)

BUILD_CLIB()

FILE(STRINGS files.txt CONTRIB_FILES)

ADD_LIBRARY(${LIBNAME} SHARED
  ${CONTRIB_FILES}
)

# ---- The following may be required for OSX
# TARGET_LINK_LIBRARIES(${LIBNAME} ${ZLIB_NAME})

INSTALL_CLIB()

